kubernetes/template/11-db-install.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ${x0_APP_ID}-${x0_APP_ENV}-db-install
  namespace: ${x0_NAMESPACE}
spec:
  serviceAccountName: ci-builder
  automountServiceAccountToken: false
  containers:
  - name: db-install
    image: docker.io/library/your-db-install:latest
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
