kubernetes/template/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${x0_APP_ID}-${x0_VHOST_ID}-${x0_APP_ENV}-notls-ingress
  namespace: ${x0_NAMESPACE}
  ${x0_INGRESS_ANNOTATIONS}
spec:
  ingressClassName: class-${x0_LOADBALANCER_REF}
  rules:
  - host: ${x0_APP_VHOST_DNS}
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: ${x0_APP_ID}-${x0_VHOST_ID}-${x0_APP_ENV}-svc
              port:
                number: 80
